chats contrast fix

--- a/1.components-styleguide/assets/styles/patterns/atoms/times.less
+++ b/1.components-styleguide/assets/styles/patterns/atoms/times.less
@@ -1,5 +1,4 @@
 time,
 datetime {
     font-weight: @font-weight-semibold;
-    color: @color-gray-mineshaft;
 }
